[tool.poetry]
name = "conda-function"
version = "0.1.0"
description = "This is an unofficial project. \"conda-function\" is a utility package for managing conda environments and handling the execution of Python functions within conda environments."
authors = ["Allen Chou <f1470891079@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
typing-extensions = "*"


[tool.poetry.extras]
all = []

[tool.poetry.group.dev.dependencies]
black = "^23"
isort = "^5"
poetry-plugin-export = "^1"
pytest = "^7"
pytest-asyncio = "^0.21.1"
rich = "^13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
